- usernameInputTestWithWrongData test method added
- Headless testing dependencies and code needed is added

- GitLab CI's configuration file added